ディレクトリ構成変更＆認証API仮作成

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "emo-base",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch app/index.tsx",
+    "dev": "tsx watch app/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
