--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.18.1",
+    "@prisma/client": "^6.14.0",
     "hono": "^4.8.12",
     "hono-sessions": "^0.8.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
     "dotenv": "^17.2.1",
+    "prisma": "^6.14.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
