--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "@hono/node-server": "^1.18.1",
     "@prisma/client": "^6.14.0",
+    "bcrypt": "^6.0.0",
     "hono": "^4.8.12",
     "hono-sessions": "^0.8.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20.11.17",
     "dotenv": "^17.2.1",
     "prisma": "^6.14.0",
