--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@prisma/client": "^6.14.0",
     "bcrypt": "^6.0.0",
     "hono": "^4.8.12",
-    "hono-sessions": "^0.8.0"
+    "hono-sessions": "^0.8.0",
+    "i18next": "^25.3.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
