--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "bcrypt": "^6.0.0",
     "hono": "^4.8.12",
     "hono-sessions": "^0.8.0",
-    "i18next": "^25.3.6"
+    "i18next": "^25.3.6",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
