--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "npm-run-all --parallel dev:*",
     "dev:tsx": "tsx watch app/index.ts",
-    "dev:scss": "sass --watch public/css/style.scss:public/css/style.css",
+    "dev:scss": "sass --watch public/css/style.scss:public/css/dist/style.css",
     "build": "tsc",
     "start": "node dist/index.js"
   },
