--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,14 @@
     ],
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": ".",
+    "paths": {
+      "@emo-adapters/*": ["./packages/adapters/*"],
+      "@emo-components/*": ["./packages/components/*"],
+      "@emo-middlewares/*": ["./packages/middlewares/*"],
+      "@emo-session/*": ["./packages/session/*"]
+    }
   },
   "exclude": ["node_modules"]
 }
