--- a/package.json
+++ b/package.json
@@ -2,29 +2,23 @@
   "name": "emo-base",
   "type": "module",
   "scripts": {
-    "dev": "npm-run-all --parallel dev:*",
-    "dev:tsx": "tsx watch app/index.ts",
-    "dev:scss": "sass --watch public/css/style.scss:public/css/dist/style.css",
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "bun dev:css & bun --watch app/index.ts",
+    "dev:css": "sass --watch public/css/style.scss:public/css/dist/style.css",
+    "build": "bun build app/index.ts --outdir dist --minify",
+    "start": "bun app/index.ts"
   },
   "dependencies": {
-    "@hono/node-server": "^1.18.1",
     "@prisma/client": "^6.14.0",
-    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "hono": "^4.8.12",
     "hono-sessions": "^0.8.0",
     "i18next": "^25.3.6",
     "zod": "^4.0.17"
   },
   "devDependencies": {
-    "@types/bcrypt": "^6.0.0",
-    "@types/node": "^20.11.17",
+    "@types/bun": "^1.2.21",
     "dotenv": "^17.2.1",
-    "npm-run-all": "^4.1.5",
     "prisma": "^6.14.0",
-    "sass": "^1.90.0",
-    "tsx": "^4.7.1",
-    "typescript": "^5.8.3"
+    "sass": "^1.90.0"
   }
 }
