--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,7 @@
     "jsx": "react-jsx",
     "jsxImportSource": "hono/jsx",
     "outDir": "./dist",
-    "rootDir": ".",
-    "paths": {
-      "@emo-components": ["./packages/components/index.ts"],
-      "@emo-middlewares": ["./packages/middlewares/index.ts"],
-      "@emo-session": ["./packages/session/index.ts"]
-    }
+    "rootDir": "."
   },
   "exclude": ["node_modules"]
 }
